--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,7 +3,7 @@ description: Demonstrates how to use the social_share plugin.
 publish_to: "none"
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=3.3.4 <4.0.0"
 
 dependencies:
   flutter:
@@ -11,11 +11,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  screenshot: ^0.1.1
-  path_provider: ^1.5.1
+  cupertino_icons: ^1.0.8
+  screenshot: ^1.2.0
+  path_provider: ^2.1.4
   http:
-  image_picker: ^0.6.3+1
+  image_picker: ^0.8.9
 
 dev_dependencies:
   flutter_test:
